2017.10/_sources/plugins/available/longitudinal/first-differences.txt
first-differences: First difference computation between sequential states
=========================================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime longitudinal first-differences [OPTIONS]

     Calculates first differences in "metric" between sequential states for
     samples collected from individual subjects sampled repeatedly at two or
     more states. First differences can be performed on a metadata column
     (including artifacts that can be input as metadata) or a feature in a
     feature table. Outputs a data series of first differences for each
     individual subject at each sequential pair of states, labeled by the
     SampleID of the second state (e.g., paired differences between time 0 and
     time 1 would be labeled by the SampleIDs at time 1). This file can be used
     as input to linear mixed effects models or other longitudinal or diversity
     methods to compare changes in first differences across time or among
     groups of subjects.

   Options:
     --m-metadata-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [required]
                                     Sample metadata file containing
                                     individual_id_column.
     --p-state-column TEXT           [required]
                                     Metadata column containing state
                                     (e.g., Time) across which samples are
                                     paired.
     --p-individual-id-column TEXT   [required]
                                     Metadata column containing IDs
                                     for individual subjects.
     --p-metric TEXT                 [required]
                                     Numerical metadata or artifact
                                     column to test.
     --p-replicate-handling [random|drop|error]
                                     [default: error]
                                     Choose how replicate
                                     samples are handled. If replicates are
                                     detected, "error" causes method to fail;
                                     "drop" will discard all replicated samples;
                                     "random" chooses one representative at
                                     random from among replicates.
     --i-table PATH                  Artifact: FeatureTable[RelativeFrequency]
                                     [optional]
                                     Feature table to optionally use
                                     for computing first differences.
     --o-first-differences PATH      Artifact: SampleData[FirstDifferences]
                                     [required if not passing --output-dir]
                                     Series of first differences.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>First difference computation between sequential states

   Calculates first differences in "metric" between sequential states for
   samples collected from individual subjects sampled repeatedly at two or
   more states. First differences can be performed on a metadata column
   (including artifacts that can be input as metadata) or a feature in a
   feature table. Outputs a data series of first differences for each
   individual subject at each sequential pair of states, labeled by the
   SampleID of the second state (e.g., paired differences between time 0 and
   time 1 would be labeled by the SampleIDs at time 1). This file can be used
   as input to linear mixed effects models or other longitudinal or diversity
   methods to compare changes in first differences across time or among groups
   of subjects.

   Parameters
   ----------
   table : FeatureTable[RelativeFrequency], optional
       Feature table to optionally use for computing first differences.
   metadata : Metadata
       Sample metadata file containing individual_id_column.
   state_column : Str
       Metadata column containing state (e.g., Time) across which samples are
       paired.
   individual_id_column : Str
       Metadata column containing IDs for individual subjects.
   metric : Str
       Numerical metadata or artifact column to test.
   replicate_handling : Str % Choices({'drop', 'error', 'random'}), optional
       Choose how replicate samples are handled. If replicates are detected,
       "error" causes method to fail; "drop" will discard all replicated
       samples; "random" chooses one representative at random from among
       replicates.

   Returns
   -------
   first_differences : SampleData[FirstDifferences]
       Series of first differences.</pre>
       </div>
     </div>
   </div>